--- a/configs/.config/hypr/custom/keybinds.conf
+++ b/configs/.config/hypr/custom/keybinds.conf
@@ -10,13 +10,17 @@ bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/custom/keybinds.conf
 # Add a comment after a bind to add a description, like above
 
 # Window
+unbind = Ctrl+Super+Shift, Up
+unbind = Ctrl+Super+Shift, Down
+unbind = Ctrl+Super+Shift, Left
+unbind = Ctrl+Super+Shift, Right
 bind = Ctrl+Super+Shift, Up, movetoworkspace, r-5 # [hidden]
 bind = Ctrl+Super+Shift, Down, movetoworkspace, r+5 # [hidden]
+bind = Ctrl+Super+Shift, Left, movetoworkspace, r-1 # [hidden]
+bind = Ctrl+Super+Shift, Right, movetoworkspace, r+1 # [hidden]
 
 # Apps
-unbind = Super, E
-bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "nautilus" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
 unbind = Super, C
-bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "cursor --ozone-platform-hint=auto --enable-wayland-ime" "zeditor" "command -v nvim && kitty -1 nvim" # Code editor
 unbind = Super, X
+bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "antigravity" "cursor --ozone-platform-hint=auto --enable-wayland-ime" "zeditor" "command -v nvim && kitty -1 nvim" # Code editor
 bind = Super, X, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "zeditor" "command -v nvim && kitty -1 nvim" # Text editor
