hypr: Update env.conf

--- a/configs/.config/hypr/custom/env.conf
+++ b/configs/.config/hypr/custom/env.conf
@@ -11,6 +11,9 @@ env = SDL_IM_MODULE, fcitx
 env = GLFW_IM_MODULE, ibus
 env = INPUT_METHOD, fcitx
 
+# Enable org.freedesktop.impl.portal.FileChooser = kde
+env = GTK_USE_PORTAL,1
+
 # EDITOR
 env = EDITOR, nvim
 
