hypr: update windowrule of wine

--- a/configs/.config/hypr/custom/rules.conf
+++ b/configs/.config/hypr/custom/rules.conf
@@ -11,7 +11,7 @@ windowrule = match:class ^(wechat)$, float on
 windowrule = match:class ^(wechat)$, match:title ^(微信)$, tile on
 
 # Discard the blank window of Wine
-windowrule = match:class ^$, match:title ^$, match:xwayland true, workspace special:garbage silent, no_initial_focus on, border_size 0
+windowrule = match:class ^$, match:title ^$, match:xwayland 1, workspace special:garbage silent, opacity 0
 
 # Firefox
 windowrule = match:class ^(firefox)$, match:title ^(我的足迹)$, float on, center on, size 800 600
